Additional fix for mobile layout

--- a/submissions/CuteShaun/html5-form/scss/components/_input.scss
+++ b/submissions/CuteShaun/html5-form/scss/components/_input.scss
@@ -21,7 +21,6 @@
   }
 }
 
-
 .user__input {
   min-height: 53px;
   min-width: 250px;
@@ -34,8 +33,8 @@
   &--long {
     min-width: 325px;
 
-    @media (max-width: 620px) {
-      min-width: 250px;
+    @media (max-width: 500px) {
+      min-width: 234px;
     }
   }
 
@@ -45,8 +44,13 @@
   }
 
   &--short {
+    width: 110px;
     max-width: 110px;
-    min-width: 0;
+
+    @media (max-width: 500px) {
+      min-width: 110px;
+      max-width: 110px;
+    }
   }
 
   &::placeholder {
