--- a/submissions/CuteShaun/html5-form/scss/abstracts/_page.scss
+++ b/submissions/CuteShaun/html5-form/scss/abstracts/_page.scss
@@ -555,6 +555,7 @@
   color: $slate;
   cursor: pointer;
   transition: 0.25s;
+  text-align: center;
 }
 
 .tone__icon {
@@ -608,6 +609,13 @@
   @include sectionNum();
 }
 
+.user__card {
+  @media screen and(max-width: 410px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .user__text {
   display: block;
   margin-bottom: 45px;
@@ -617,28 +625,51 @@
   display: flex;
   flex-wrap: wrap;
   margin: 20px 0;
+
+  @media screen and (max-width: 658px) {
+    margin: 0;
+  }
+
+  @media screen and (max-width: 527px) {
+    justify-content: center;
+  }
 }
 
 .user__input-wrapper-inner {
   position: relative;
   display: inline-block;
   margin: 1.5rem 2rem 0 0;
+
+  @media screen and (max-width: 410px) {
+    margin-right: 0;
+  }
 }
 
 .user__payment {
   margin: 50px 0 35px 0;
   display: flex;
   flex-wrap: wrap;
+
+  @media screen and (max-width: 632px) {
+    justify-content: center;
+  }
+
+  @media screen and (max-width: 550px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .user__payment-label {
   position: relative;
-  padding: 30px 50px;
+  padding: 25px 45px;
   border: 1px solid $lightSteel;
   background-color: $whiteSmoke2;
   border-radius: 3px;
   cursor: pointer;
   transition: 0.2s;
+  width: 234px;
+  text-align: center;
 
   &:hover {
     @include defaultHover();
@@ -646,10 +677,18 @@
 
   &:not(:last-child) {
     margin-right: 20px;
+
+    @media screen and (max-width: 550px) {
+      margin-right: 0;
+    }
   }
 
-  @media (max-width: 1200px) {
+  @media screen and (max-width: 1200px) {
     margin: 10px 10px 10px 0;
+  }
+
+  @media (max-width: 550px) {
+    margin: 10px 0;
   }
 }
 
