--- a/submissions/kalash14/html5-form/scss/_vars.scss
+++ b/submissions/kalash14/html5-form/scss/_vars.scss
@@ -13,6 +13,12 @@ $mainBlue: #76a7e1;
 $customYellow: #edbe76;
 $lightGrey: #a5abc5;
 $blocksGrey: #f7f7fa;
+$shadow: 0 10px 20px rgba(165, 171, 197, 0.19),
+0 6px 6px rgba(165, 171, 197, 0.23);
+$blueShadow: 0 10px 20px rgba(66, 134, 244, 0.19),
+0 6px 6px rgba(66, 134, 244, 0.23);
+$brightShadow: 0 10px 20px rgba(95, 202, 198, 0.23),
+0 6px 6px rgba(95, 202, 198, 0.27);
 
 /* measurements units */
 
