--- a/submissions/bugagashinka/html5-form/css/elements/elements.css
+++ b/submissions/bugagashinka/html5-form/css/elements/elements.css
@@ -19,7 +19,7 @@
   margin-top: 1em;
 }
 .translate-item {
-  width: 295px;
+  width: 100%;
   height: 140px;
   min-width: min-content;
 }
@@ -31,13 +31,12 @@
 /* Upload documents section elements */
 input[type='file'] {
   position: absolute;
-  clip: rect(0 0 0 0);
-  height: 6px;
-  width: 8px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  overflow: hidden;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 2;
 }
 input[type='file']:focus ~ .upload-button-border {
   border: 1px solid #76a7e1;
@@ -115,7 +114,7 @@ input[type='file']:focus ~ .upload-button-border {
 
 /* Payment section elements */
 .payment-item {
-  width: 108px;
+  width: 95px;
   height: 70px;
   margin-right: 4vw;
 }
@@ -124,6 +123,7 @@ input[type='file']:focus ~ .upload-button-border {
   height: 32px;
 }
 .field-block {
+  width: 100%;
   position: relative;
 }
 .input-label {
@@ -182,11 +182,14 @@ input[type='file']:focus ~ .upload-button-border {
 .input-password {
   letter-spacing: 0.2em;
 }
+.input-date::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  display: none;
+}
 .bottom-order .button {
   width: 100%;
   margin-top: 15px;
 }
-
 .agreement-check {
   position: relative;
   top: 4px;
