--- a/submissions/RomanovAleksander/html5-form/app/style/_payment.scss
+++ b/submissions/RomanovAleksander/html5-form/app/style/_payment.scss
@@ -60,6 +60,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    span {
+      display: block;
+    }
   }
   &__radio label {
     display: inline-block;
