--- a/submissions/Eugene50/popup-menu/style.css
+++ b/submissions/Eugene50/popup-menu/style.css
@@ -13,7 +13,16 @@ a {
 img {
    padding-top: 10px;
 }
-
+ /* ------------------hidden chackbox------------------------------ */
+.visually-hidden {
+   position: absolute;
+   clip: rect(0 0 0 0);
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   overflow: hidden;
+}
+/* ---------------------------------------------------------------- */
 .container {
    display: flex;
    flex-wrap: wrap;
@@ -53,14 +62,6 @@ img {
    margin-left: 0px;
 }
 
-.main-checkbox {
-   position: absolute;
-   clip: rect(0 0 0 0);
-   width: 1px;
-   height: 1px;
-   margin: -1px;
-  }
-
 .main-checkbox:checked ~ label {
    display: block;
    width: 20px;
@@ -73,14 +74,6 @@ img {
 
 .main-checkbox:checked ~ .wraper {
    display: block;
-}
-
-.sub-checkbox {
-   position: absolute;
-   clip: rect(0 0 0 0);
-   width: 1px;
-   height: 1px;
-   margin: -1px;
 }
 
 .sub-checkbox:focus ~ .more-label p {
@@ -143,6 +136,9 @@ img {
 
 .alf {
    border-radius: 180px;
+   width: 40px;
+   height: 40px;
+   padding: 0;
 }
 
 .menu-icon {
