--- a/submissions/CrazyPike/formss/_section-payment.scss
+++ b/submissions/CrazyPike/formss/_section-payment.scss
@@ -17,6 +17,9 @@
   flex-direction: column;
   align-items: left;
   margin-right:30px;
+  & span {
+    text-transform: uppercase;
+  }
 }
 
 .form-payment input:hover{
@@ -101,6 +104,9 @@
   display: flex;
   flex-direction: column;
   align-items: left;
+  & span{
+    text-transform: uppercase;
+  }
 }
 
 .form-payment__card-number{
