--- a/submissions/CrazyPike/formss/_section-translate.scss
+++ b/submissions/CrazyPike/formss/_section-translate.scss
@@ -17,6 +17,7 @@
   font-size: 20px;
   margin-left: auto;
   margin-right: auto;
+  text-transform: uppercase;
 }
 
 .section-translate__desc > .section-translate__text__center{
