--- a/submissions/CrazyPike/formss/index.pug
+++ b/submissions/CrazyPike/formss/index.pug
@@ -3,32 +3,32 @@ html(lang="ru")
     head
         meta(charset="utf-8")
         meta(name='viewport', content="width=device-width, initial-scale=1")
-        title= "Главная страница"
+        title= "Main form"
         link(href='main.css', rel='stylesheet')
     body.page__common
         nav.menu
             button.menu__button
                 span.menu__button-text
                     img.menu__button-img(src='img/arrow_back.png', alt='Arrow back')
-                    |GO BACK
-            a(href='#')
+                    span go back
+            a.page__links(href='#')
                 img.menu__logo(src='img/logo.png', alt='Here is a logo')
             button.menu__button
                 span.menu__button-text
                     img.menu__button-img(src='img/icon_profile.png', alt='Log in')
-                    |SIGN IN
+                    span sign in
         main.form
             form(id='html5form')
             section.form__common-info
                 div.quote
                     img.form__icons(src='img/icon_order.png', alt='Order icon')
-                    div.form__header-text YOUR ORDER
+                    div.form__header-text your quote
                     table.quote__table
                         thead
-                            td  ITEMS
-                            td  DETAILS
-                            td  PRICE
-                            td  DELIVERY
+                            td  items
+                            td  details
+                            td  price
+                            td  delivery
                         tr
                             td  2 documents
                             td  2 languages
@@ -36,21 +36,21 @@ html(lang="ru")
                             td  48 hours
                     div.quote__buttons
                         button.menu__button.quote__button-place-order
-                            span.menu__button-text PLACE ORDER
+                            span.menu__button-text place order
                         button.menu__button
-                            span.menu__button-text PRINT A QUOTE
+                            span.menu__button-text print a quote
                 div.contacts
                     img.form__icons(src='img/icon_help.png', alt='Help icon')
-                    div.form__header-text HELP CENTER
+                    div.form__header-text help center
                     div.contacts__desc
                         | If you need assistance while placing your
                         | order, contact one of our beloved Project
                         | Manager by phone or email
                     div.contacts__details
-                        span +971 (0) 555 555
+                        a(href='tel:+9710555555') +971 (0) 555 555
                         span help@qtest.com
             section.section-translate
-                div.section-translate__desc SELECT WHAT YOU WANT TO TRANSLATE
+                div.section-translate__desc select what you want to translate
                     div.section-translate__text__center
                     hr.section-translate__horizontal-line
                 div.section-translate__options
@@ -77,14 +77,14 @@ html(lang="ru")
                     label(for='upload-input', tabindex='0')
                         span.menu__button-text
                             img.menu__button-img(src="img/icon_cloud.png",alt="Upload icon")
-                            |Upload a new file
+                            span Upload a new file
                 div.section-upload__table-container
                     table.section-upload__table
                         thead
-                            td.section-upload__table-col-1 FILE NAME
-                            td.section-upload__table-col-2 FILE SIZE
-                            td.section-upload__table-col-3 NUMBER OF WORDS
-                            td.section-upload__table-col-4 REMOVE
+                            td.section-upload__table-col-1 file name
+                            td.section-upload__table-col-2 file size
+                            td.section-upload__table-col-3 number or words
+                            td.section-upload__table-col-4 remove
                         tr
                             td.section-upload__table-col-1
                                 img(src="img/icon_file.png")
@@ -152,14 +152,17 @@ html(lang="ru")
                     div.section__ordinal-number 4
                     div.section__header Tell us how urgent this job is
                     div.section-urgent__range
+                        div.section-urgent__range-end
+                            div.input-range-end
+                            div.input-range-end
                         input(type="range", min="0", max="2", value="1" id="form__range")
                         div.section-urgent__range-label
-                            span I GOT TIME
-                            span AVERAGE
-                            span YESTERDAY
+                            span i got time
+                            span average
+                            span yesterday
                     div.section-urgent__description
                         img.form__icons(src="img/icon_info.png",alt='')
-                        div.form__header-text YOUR ORDER
+                        div.form__header-text your order
                         div.section-urgent__description-text
                             span With the AVERAGE timeline set up, our expert translator can
                             | take a reasonable amount of time perfecting your translation
@@ -170,17 +173,17 @@ html(lang="ru")
                     a(href="#") Sign In
                 div.form-payment__input-name
                     div.form-payment__input
-                        span FULL NAME
+                        span full name
                         input(type='text', placeholder='Full name', pattern='[0-9A-Za-z. -]+',
                         title='Enter the name')
                 div.form-payment__input-email-pass
                     div.form-payment__input
-                        span EMAIL ADDRESS
+                        span email address
                         input(type='email', placeholder='Email',
                         pattern='[0-9A-Za-z.-]+[@][0-9A-Za-z.-]+[.][0-9A-Za-z.-]+',
                         title='Email address')
                     div.form-payment__input
-                        span PASSWORD
+                        span password
                         input(type='password', minlength='6', placeholder='Enter password..',
                         title='Enter password')
                 div.form-payment__option-container
@@ -195,15 +198,15 @@ html(lang="ru")
                         img(src='img/icon_amazon.png')
                 div.form-payment__card-info
                     div.form-payment__card-input
-                        span CARD NUMBER
+                        span card number
                         input.form-payment__card-number(type='text', pattern='[0-9]{16}', placeholder='Card number..',
                         minlength=16, maxlength=16,title='Card number must be 16-digit')
                     div.form-payment__card-input
-                        span CARD EXPIRE
+                        span card expire
                         input.form-payment__card-expire(type='text', placeholder='MM/YY', pattern='[0-9]{2}/[0-9]{2}',
                         title='Format MM/YY')
                     div.form-payment__card-input
-                        span CARD CVV
+                        span card cvv
                         input.form-payment__card-cvv(type='password', pattern='[0-9]{3}',placeholder='CVV', minlength=3,
                         maxlength=3,title='CVV mush have 3 digits')
                         span
@@ -212,30 +215,31 @@ html(lang="ru")
                     input(type='checkbox',id='TC-label')
                     label(for='TC-label') I agree to the terms & Conditions
                 button.menu__button.quote__button-place-order
-                    span.menu__button-text PLACE ORDER
+                    span.menu__button-text place order
                 button.menu__button
-                    span.menu__button-text PRINT A QUOTE
+                    span.menu__button-text print a quote
 
         footer.footer
             div.footer__container
                 section.footer__item
                     img.footer__item-icon(src='img/icon_heart.png', alt='heart icon')
-                    span.footer__item-header WHAT WE DO
+                    span.footer__item-header what we do
                     span.footer__item-content We provide a full range of language
                         | services including content development,
                         | document, website and social media
                         | accounts translation
                 section.footer__item
                     img.footer__item-icon(src='img/icon_compass.png', alt='Compass icon')
-                    span.footer__item-header OUR MAIN OFFICE
-                    span.footer__item-content DUBAI, UAE
+                    span.footer__item-header our main office
+                    span.footer__item-content Dubai, UAE
                         br
                         span P.O. Box 832472
                         br
-                        span Phone +971 (0) 44278128
+                        span Phone
+                            a(href='tel:+9710555555') +971 (0) 44278128
                 section.footer__item
                     img.footer__item-icon(src='img/icon_network.png', alt='Network icon')
-                    span.footer__item-header CONNECT WITH US
+                    span.footer__item-header connect with us
                     span.footer__item-content
                             div.footer__social-item
                                 img(src='img/icon_facebook.png', alt='Facebook logo')
@@ -246,6 +250,6 @@ html(lang="ru")
                             div.footer__social-item
                                 img(src='img/icon_linkedin.png', alt='Linkedin  logo')
                                 span Linkedin
-                a(href='#')
+                a.page__links(href='#')
                     img(src='img/logo_grey.png', alt='Company logo')
 
