--- a/submissions/CrazyPike/formss/main.css
+++ b/submissions/CrazyPike/formss/main.css
@@ -1,7 +1,7 @@
 .page__common {
   background: #eceef4;
   color: #77768f;
-  font-family: "Franklin Gothic Medium";
+  font-family: sans-serif;
   font-size: 14px;
 }
 
@@ -11,6 +11,13 @@ input:focus + label {
 
 button:hover {
   border-color: black;
+}
+
+.page__links:hover {
+  border: 1px black solid;
+}
+.page__links:focus {
+  outline: 2px solid #7fb9f9;
 }
 
 .menu {
@@ -44,6 +51,7 @@ button:hover {
   margin-right: auto;
   margin-left: auto;
   align-items: center;
+  text-transform: uppercase;
 }
 
 .menu__button-img {
@@ -71,6 +79,7 @@ button:hover {
   grid-row: 1/2;
   justify-self: start;
   align-self: center;
+  text-transform: uppercase;
 }
 
 .section__ordinal-number {
@@ -145,6 +154,9 @@ input:not(:placeholder-shown):valid {
   grid-column: 3/17;
   grid-row: 2/4;
 }
+.quote__table thead {
+  text-transform: uppercase;
+}
 
 .quote__buttons {
   grid-column: 17/23;
@@ -181,6 +193,7 @@ input:not(:placeholder-shown):valid {
   font-size: 20px;
   margin-left: auto;
   margin-right: auto;
+  text-transform: uppercase;
 }
 
 .section-translate__desc > .section-translate__text__center {
@@ -258,6 +271,9 @@ input:not(:placeholder-shown):valid {
   height: 50px;
   color: #c9d0e1;
 }
+.section-upload__button span {
+  text-transform: capitalize;
+}
 
 .section-upload__button:hover {
   border-color: black;
@@ -279,6 +295,9 @@ input:not(:placeholder-shown):valid {
   text-align: left;
   height: 40px;
   vertical-align: center;
+}
+.section-upload__table thead {
+  text-transform: uppercase;
 }
 
 .section-upload__table tr {
@@ -480,9 +499,20 @@ input[type=file] {
   outline: 1px solid black;
 }
 
+.section-urgent__range-end {
+  display: flex;
+  justify-content: space-between;
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .section-urgent__range-label {
   display: flex;
   justify-content: space-between;
+}
+.section-urgent__range-label span {
+  text-transform: uppercase;
 }
 
 .section-urgent__description {
@@ -510,6 +540,17 @@ input[type=range] {
   margin-right: auto;
   background: transparent;
   /* Otherwise white in Chrome */
+  z-index: 4;
+}
+
+.input-range-end {
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+  background: #eceef4;
+  position: relative;
+  top: 70px;
+  z-index: 2;
 }
 
 input[type=range]:hover {
@@ -575,12 +616,12 @@ input[type=range]::-ms-thumb {
 input[type=range]::-webkit-slider-runnable-track {
   height: 8.4px;
   cursor: pointer;
-  background: #eceef4;
-  border-radius: 1.3px;
+  background: rgba(236, 238, 244, 0.6);
+  border-radius: 4.2px;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #eceef4;
+  background: rgba(236, 238, 244, 0.6);
 }
 
 input[type=range]::-moz-range-track {
@@ -641,6 +682,9 @@ input[type=range]:focus::-ms-fill-upper {
   flex-direction: column;
   align-items: left;
   margin-right: 30px;
+}
+.form-payment__input span {
+  text-transform: uppercase;
 }
 
 .form-payment input:hover {
@@ -726,6 +770,9 @@ input[type=range]:focus::-ms-fill-upper {
   flex-direction: column;
   align-items: left;
 }
+.form-payment__card-input span {
+  text-transform: uppercase;
+}
 
 .form-payment__card-number {
   width: 375px;
@@ -793,11 +840,13 @@ input[type=range]:focus::-ms-fill-upper {
   grid-column: 2/3;
   align-self: center;
   margin-right: 10px;
+  text-transform: uppercase;
 }
 
 .footer__item-content {
   grid-row: 2/3;
   grid-column: 2/3;
+  line-height: 1.5;
 }
 
 .footer__social-item {
