--- a/submissions/RomanovAleksander/html5-form/app/style/_base.scss
+++ b/submissions/RomanovAleksander/html5-form/app/style/_base.scss
@@ -40,6 +40,7 @@ body {
   border: 1.5px solid #c9d0e1;
   font-size: 12px;
   font-weight: 700;
+  background-color: #f7f7fa;
   color: #a5abc5;
   text-transform: uppercase;
   cursor: pointer;
