--- a/submissions/RomanovAleksander/html5-form/app/style/_language.scss
+++ b/submissions/RomanovAleksander/html5-form/app/style/_language.scss
@@ -40,15 +40,36 @@
   margin-left: 18px;
 }
 
+.select-wrapper {
+  margin-top: 15px;
+  width: 193px;
+  height:45px;
+  display: inline-block;
+  position: relative;
+  &::after {
+    content: '\25bc';
+    color: #909ab7;
+    border-left: 1px solid #d7d8e0;
+    position: absolute;
+    padding: 15px;
+    top: 0;
+    right: 0;
+    pointer-events: none;
+  }
+}
+
 .choice-language {
-  min-width: 193px;
+  position: relative;
+  width: 100%;
+  height: 100%;
   font-weight: 600;
   background-color: #f7f7fa;
   color: #9098b7;
   border: 1px solid #d7d8e0;
   border-radius: 5px;
-  margin-top: 15px;
-  padding: 14px 14px;
+  padding-left: 40px;
+  cursor: pointer;
+  appearance: none;
 }
 
 .first {
@@ -57,10 +78,10 @@
 
 .choice-language-btn {
   font-weight: 600;
-  margin-top: 1.5rem;
-  padding: 1.3rem 1.3rem;
+  margin-top: 15px;
+  padding: 15px;
   background-color: #f7f7fa;
   color: #9098b7;
   border: 1px solid #d7d8e0;
-  border-radius: 4px;
+  border-radius: 5px;
 }
